# CodeBox

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  readme.md  tsconfig.json  vite.config.ts
Database/Migrations/20260505170000_test_migration/: up.sql
Database/Migrations/20260505180333_user/: down.sql  up.sql
Database/Migrations/20260505180611_roles/: down.sql  up.sql
Database/Migrations/20260505180616_permissions/: down.sql  up.sql
Database/Migrations/20260505180620_role_permissions/: down.sql  up.sql
Database/Migrations/20260505180624_user_roles/: down.sql  up.sql
Database/Migrations/20260505193854_sessions/: down.sql  up.sql
Frontend/: index.tsx  main.tsx
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
migrations/: 20260618202851_create_users_table.sql  20260619164713_create_sessions_tabl.sql  20260619165000_create_role_permissions_table.sql  20260619165014_create_roles_table.sql  20260619165025_create_roles_permissions_table.sql  20260619165035_create_user_roles_table.sql  20260619165502_create_classes_table.sql  20260619165513_create_class_members_table.sql
src/: main.rs
src/Bootstrap/: Bootstrap.ts
src/Commands/: ClearDb.ts  MakeMigration.ts
src/Helpers/: getDeviceId.ts
src/Middlewares/: AuthMiddleware.ts  CSRFMiddleware.ts  PermissionCheckMiddleware.ts
src/Models/: ForgotPassword.ts  Permissions.ts  Roles.ts  Sessions.ts  User.ts  rolePermissions.ts  userRoles.ts
src/Services/: KeyHash.ts
src/app/: main.ts  mod.rs
src/bootstrap/: init.rs
src/drivers/: postgres.rs
src/misc/: cookies.rs  csrf.rs  hash.rs  http_errors.rs  mod.rs
src/router/: api-auth.ts  type.ts
src/routes/: auth.rs  mod.rs
(+19 files in other folders)
