[package]
name = "CodeBox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
