[package]
name = "CodeBox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
dotenvy = "0.15.7"
hmac = "0.12.1"
rand = "0.9.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
