[package]
name = "CodeBox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.9"
base64 = "0.22.1"
dotenvy = "0.15.7"
hmac = "0.12.1"
rand = "0.9.2"
rand_core = "0.10.1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.3"
validator = { version = "0.20", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
chrono = { version = "0.4", features = ["serde"] }
